--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-argparse",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Lightweight argument parser",
   "author": "muji <noop@xpm.io>",
   "repository": {
@@ -26,11 +26,12 @@
   },
   "devDependencies": {
     "mocha": "~1.17.0",
-    "chai": "~1.9.0"
+    "chai": "~1.9.0",
+    "istanbul": "~0.2.4"
   },
   "engine": [ "node >= 0.10.21" ],
   "scripts": {
-    "test": "./node_modules/.bin/mocha -u bdd --recursive --reporter list -A test/unit/"
+    "test": "istanbul cover _mocha -- -u bdd --recursive --reporter list -A test/unit/"
   },
   "config" : {}
 }
