--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-argparse",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "description": "Lightweight argument parser",
   "author": "muji <noop@xpm.io>",
   "repository": {
@@ -10,10 +10,12 @@
   "bugs": {
     "url": "https://github.com/freeformsystems/cli-argparse/issues"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/freeformsystems/cli-argparse/blob/master/LICENSE"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/freeformsystems/cli-argparse/blob/master/LICENSE"
+    }
+  ],
   "keywords": [
     "cli",
     "optparse",
@@ -29,9 +31,11 @@
     "chai": "~1.9.0",
     "istanbul": "~0.2.4"
   },
-  "engine": [ "node >= 0.10.21" ],
+  "engine": [
+    "node >= 0.10.21"
+  ],
   "scripts": {
     "test": "istanbul cover _mocha -- -u bdd --recursive --reporter list -A test/unit/"
   },
-  "config" : {}
+  "config": {}
 }
