--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "options"
   ],
   "dependencies": {
-    "cli-util": "~1.1.5"
+    "cli-util": "^1.1.19"
   },
   "devDependencies": {
-    "mocha": "~1.17.0",
-    "chai": "~1.9.0",
-    "istanbul": "~0.2.4"
+    "chai": "^1.9.1",
+    "istanbul": "^0.3.2",
+    "mocha": "^1.21.4"
   },
   "engine": [
     "node >= 0.10.21"
