--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "node >= 0.10.21"
   ],
   "scripts": {
-    "test": "istanbul cover _mocha -- -u bdd --recursive --reporter list -A test/unit/"
+    "test": "istanbul cover _mocha -- -u bdd --recursive --reporter list -A test/spec"
   },
   "config": {}
 }
