--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "options"
   ],
   "dependencies": {
-    "cli-util": "^1.1.24"
+    "cli-util": "~1.1.27"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
-    "istanbul": "^0.3.2",
-    "mocha": "^1.21.4"
+    "chai": "~1.10.0",
+    "istanbul": "~0.3.5",
+    "mocha": "~2.1.0"
   },
   "engine": [
     "node >= 0.10.21"
