--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node >= 0.10.21"
   ],
   "scripts": {
-    "test": "istanbul cover _mocha -- -u bdd --recursive --reporter list -A test/spec"
+    "test": "NODE_ENV=test mocha test/spec",
+    "cover": "NODE_ENV=test istanbul cover _mocha -- test/spec"
   }
 }
