Improve vars handling.
When a long option such as (--no-color) was followed by a variable
declaration (@foo=bar) the variable was being mapped to the long option
value when it should have been treated as a var.

In situations like this the argument is treated as unparsed as it is
not aliased.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "node >= 0.10.21"
   ],
   "scripts": {
-    "test": "NODE_ENV=test mocha test/spec",
+    "test": "NODE_ENV=test mocha ${TEST_SPEC:-test/spec}",
     "cover": "NODE_ENV=test istanbul cover _mocha -- test/spec"
   }
 }
