--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "1.0.9",
   "description": "Lightweight argument parser",
   "author": "muji <noop@xpm.io>",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeformsystems/cli-argparse"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "url": "https://github.com/cli-kit/cli-argparse"
   },
   "bugs": {
-    "url": "https://github.com/freeformsystems/cli-argparse/issues"
+    "url": "https://github.com/cli-kit/cli-argparse/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/freeformsystems/cli-argparse/blob/master/LICENSE"
+      "url": "https://github.com/cli-kit/cli-argparse/blob/master/LICENSE"
     }
   ],
   "keywords": [
@@ -30,12 +28,13 @@
     "camelcase": "~1.2.1"
   },
   "devDependencies": {
-    "chai": "~3.2.0",
-    "istanbul": "~0.3.17",
-    "mocha": "~2.2.5"
+    "chai": "~3.5.0",
+    "istanbul": "~0.4.2",
+    "mocha": "~2.4.5"
   },
   "scripts": {
     "clean": "rm -rf coverage",
+    "lint": "jshint . && jscs .",
     "test": "NODE_ENV=test mocha ${TEST_SPEC:-test/spec}",
     "cover": "NODE_ENV=test istanbul cover _mocha -- test/spec"
   }
