--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "chai": "~3.5.0",
+    "coveralls": "~2.11.6",
     "istanbul": "~0.4.2",
     "mocha": "~2.4.5"
   },
@@ -36,6 +37,7 @@
     "clean": "rm -rf coverage",
     "lint": "jshint . && jscs .",
     "test": "NODE_ENV=test mocha ${TEST_SPEC:-test/spec}",
-    "cover": "NODE_ENV=test istanbul cover _mocha -- test/spec"
+    "cover": "NODE_ENV=test istanbul cover _mocha -- test/spec",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   }
 }
